macros/tests/fail/dup_skip_attr.stderr
error: duplicate skip attribute
 --> tests/fail/dup_skip_attr.rs:8:25
  |
8 |     #[wasm_export(skip, skip)]
  |                         ^^^^
